Fix layout shift

--- a/app/ui/WXCard/WXCard.module.css
+++ b/app/ui/WXCard/WXCard.module.css
@@ -1,15 +1,21 @@
+.container {
+  width: 100%;
+  height: 112px;
+}
+
 .card {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   width: 100%;
+  height: 100%;
   padding: 0.75rem;
   border: 1px solid rgba(var(--card-border-rgb), 0.3);
   border-radius: 10px;
   color: rgb(var(--card-border-rgb));
-  /* &:hover {
-    background-color: rgba(var(--card-rgb), 0.1);
-  } */
+  &:hover {
+    background-color: rgba(var(--card-rgb), 0.3);
+  }
 }
 
 .flexContainer {
@@ -69,6 +75,9 @@
 }
 
 @media (max-width: 500px) {
+  .container {
+    height: 106px;
+  }
   .flexContainer {
     gap: 0.4rem;
   }
